Actions
Bug #12618
closedcheetah: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors on SPARC with NULL pointers:
../../sun4u/cpu/us3_common.c: In function 'cpu_log_fast_ecc_error': ../../sun4u/cpu/us3_common.c:1421: error: comparison between pointer and integer ../../sun4u/cpu/us3_common.c: In function 'cpu_uninit_private': ../../sun4u/cpu/us3_common.c:5497: error: assignment makes integer from pointer without a cast ../../sun4u/cpu/us3_common.c: In function 'fpras_failure': ../../sun4u/cpu/us3_common.c:7020: error: comparison between pointer and integer
This is actually common code, assigned for first module which gave us the error.
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 0d41b2d927be6023812b1b3035b9c5cf84f700b6
commit 0d41b2d927be6023812b1b3035b9c5cf84f700b6 Author: Toomas Soome <tsoome@me.com> Date: 2020-05-10T07:35:29.000Z 12618 cheetah: NULL pointer errors Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Patrick Mooney <pmooney@pfmooney.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>
Actions